# mytoolbox

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: commit-conventions.md
exercises/beginner/: 01_number_guessing.py  02_summing_numbers.py  04_hexadecimal_output.py  05_pig_latin.py  hello.py  pig_latin.py
exercises/books/python_workout_exercises/: 03_run_timing.py
exercises/exercism/: 03_exchange.py  06_strings.py
exercises/phase1_foundations/exercism/: 01_lasagna.py  02_arcade_game.py  04_conditionals.py  05_black_jack.py  08_lists.py  09_grians.py  10_armstrong_numbers.py  11_collatz_conjecture.py  12_leap.py  13_triangle.py  14_bob.py  15_raindrop.py
exercises/phase1_foundations/python_workout_exercises/: 01_number_guessing.py  05_pig_latin.py  06_pig_latin_sentence.py
exercises/playground/: 99_hello_dictionaries.py  99_hello_lists.py
exercises/python_workout_exercises/: 07_ubbi_dubbi.py
src/mytoolbox/: __init__.py
src/mytoolbox/utils/: cli_utlis.py  flex_buzz.py  word_counter.py
tests/: test_pig_latin.py
tests/utils/: test_cli_utils.py  test_count_words.py  test_flex_buzz.py
toolbox/: hello.py  hello_dictionaries.py  hello_lists.py
