[project]
name            = "mytoolbox"
version         = "0.0.1"
description     = "Sandbox for learning Python"
requires-python = ">=3.10"
readme          = "README.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "pre-commit",
    "coverage",          # <-- Add coverage here too! (nice-to-have)
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.coverage.run]
source = ["src/mytoolbox"]    # only one [tool.coverage.run] block

[tool.coverage.report]
show_missing = true
fail_under = 85
